--- a/data/process_data.ipynb
+++ b/data/process_data.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = 'human_attn_vis_data.json'\n",
-    "out_prefix = 'teacher'"
+    "data_path = 'attn_vis_data.json'\n",
+    "out_prefix = 'model'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,20 +59,22 @@
     "        for i, output_token in enumerate(output_list):\n",
     "            for j, input_token in enumerate(input_list):\n",
     "                if (j >= len(attn_dist[i])):\n",
-    "                    break\n",
+    "                    attentionRecords.append({\n",
+    "                        'inputIndex': j,\n",
+    "                        'outputIndex': i,\n",
+    "                        'weight': 0\n",
+    "                    })\n",
     "                \n",
-    "                attn_weight = attn_dist[i][j]\n",
-    "                \n",
-    "                attentionRecords.append({\n",
-    "                    'inputIndex': j,\n",
-    "                    'outputIndex': i,\n",
-    "                    'weight': attn_weight\n",
-    "                })\n",
+    "                else: \n",
+    "                    attn_weight = attn_dist[i][j]\n",
+    "\n",
+    "                    attentionRecords.append({\n",
+    "                        'inputIndex': j,\n",
+    "                        'outputIndex': i,\n",
+    "                        'weight': attn_weight\n",
+    "                    })\n",
     "                \n",
     "        for i, input_token in enumerate(input_list):\n",
-    "            if (i >= len(attn_dist[0])):\n",
-    "                break\n",
-    "                \n",
     "            inputRecords.append({\n",
     "                'index': i,\n",
     "                'token': input_token.text,\n",
@@ -80,9 +82,6 @@
     "            })\n",
     "            \n",
     "        for i, output_token in enumerate(output_list):\n",
-    "            if (i >= len(attn_dist)):\n",
-    "                break\n",
-    "                \n",
     "            outputRecords.append({\n",
     "                'index': i,\n",
     "                'token': output_token.text,\n",
