--- a/data/process_human.ipynb
+++ b/data/process_human.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
     "            similarity = h_sent.similarity(a_sent)\n",
     "            sentence_similarities[human_index][article_index] = similarity\n",
     "        \n",
-    "    sentence_similarities = softmax(sentence_similarities, theta=50, axis=1)\n",
+    "    sentence_similarities = softmax(sentence_similarities, theta=100, axis=1)\n",
     "    return sentence_similarities\n",
     "    "
    ]
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,17 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "article_str=\"(CNN)Five Muslim women stand tall in a boxing ring, slowly winding strapping around their hands. A spotlight is trained on them and the audience draws close, hanging on their every word. \\\"How can we be truthful if we have to hide out of shame, feel humiliated for feeling, for saying, doing, thinking as we please? How can that be freedom, how can that be truth?\\\" Performed at Southbank Centre's WOW -- Women of the World Festival -- Common Wealth Theatre's \\\"No Guts, No Heart, No Glory,\\\" tells the true story of Muslim female boxers from Bradford in the north of England, and how they are using the sport to transcend religious and gender barriers. The critically acclaimed show -- in which the women stamp, dance, shout, swear, punch, and even crowd surf -- was partly inspired by Ambreen Sadiq, a former UK national champion, and one of Britain's first Muslim female boxers. Her journey to success wasn't easy -- as a victim of bullying at the age of 13 she found respite in boxing after being introduced to it by her father and brother. \\\"I got bullied quite a lot growing up, my dad's Pakistani and my mum's Portuguese,\\\" Sadiq told CNN. \\\"I got stick from both sides, from white and black people. I felt like I wasn't accepted. I used to move schools so many times just to feel accepted. \\\"People would stay stuff about how I looked... everyone said that's a boy's sport, what are you doing that for? You're going to look like a man, like a transsexual. \\\"I was bullied from such a young age, I felt like it was never going to stop. Boxing helped me to control that anger.\\\" It was a transformative experience for Sadiq -- she went from being quiet, having few friends and getting into fights to plucking up courage to start conversations, and thereby build self confidence. \\\"Instead of punching someone in the face I'd punch the bag,\\\" she added. \\\"If anyone came up to me and said anything I could just walk away from it -- whereas before I'd just straight punch them in the face or something. So it's helped me a lot with discipline.\\\" It's sometimes hard to imagine Sadiq as a boxer -- her movements are calm and assured, and a kind smile is never far from her lips. \\\"Boxing has made me the person I am today, and I'm so proud of the person I am,\\\" said the 20-year-old trailblazer, who is now looked up to by girls from all kinds of communities wanting to follow in her footsteps. \\\"I've had a lot of girls -- not just Asian girls -- coming up to me and asking, how do you stop people saying it's a boy's sport? How can you convince your parents to let you box?\\\" While boxing for many is just a sport -- albeit a violent one -- when it comes to women and Muslims participating it can feel more like a cause, with Sadiq often finding herself explaining her motivation to girls. \\\"What's the difference if a boy boxes or if a girl boxes? When we're in that ring we look like boxers -- we don't look like a girl or a boy. \\\"You come into that gym, you come into that show, you come into that ring thinking I'm a boxer, not that I'm a girl or I'm a boy.\\\" The role of Nicola Adams -- the first ever female boxer to win an Olympic gold medal -- has also been key in the fight for acceptance. Sadiq tells the story of how several years ago her coach Alwyn Belcher, who also worked with Adams, originally refused to train women -- that is, until he turned up to coach the GB team (believing they'd be men) only to find an enthusiastic bunch of women ready to work. \\\"That's the day he met Nicola Adams,\\\" recalls Sadiq with a laugh. \\\"He said from that day he thought girls were better boxers -- because they like to listen.\\\" Since Adams' success at the Olympic Games, females boxing once a week increased by 79% according to a 2013 Sport England study, but even the production of \\\"No Guts, No Heart, No Glory\\\" highlighted the barriers women potentially face. Cast member and aspiring medical student Freyaa Ali said there was a girl who had wanted to participate in the show, but was ultimately prevented from doing so by her relatives. \\\"It wasn't even the boxing and it wasn't even the speech, it was the dancing we do in the ring. I'm incredibly lucky to be able to do this, and I was just so sad for her. You know there are certain women out there who can't do what we're doing right now.\\\" \\\"I think that's what makes me even more passionate about doing this -- we want to give them a voice and give them a reason, so they know they can have confidence to do stuff like this.\\\" If women do feel restricted by their religion or gender, Ali urged them to take things step by step. \\\"Go for it, just go for it. I think maybe talk to your parents first, and just tell them Mum, Dad, this is what I want to do, I want to box, I want to dance, I want to act, or whatever she wants to do. \\\"Tell them, you know what? Its OK what I'm doing, I'm not going to be going out of my boundaries and doing bad things, I'm going to stick to my limits and stick to my religion, it's not harming anyone. \\\"My parents would say, if you're happy, we're happy. I think anyone's parents would say that wouldn't they? \\\"The first step is trying it and opening that door. Once you can open it an inch you can open it a mile.\\\"\"\n",
-    "human_str=\"\\\"No Guts, No Heart, No Glory\\\" is a play by Common Wealth Theatre that tells the true story of Muslim female boxers The performance was partly inspired by former UK national champion Ambreen Sadiq who experienced bullying and discrimination \\\"We want to give them a voice and give them a reason, so they know they can have confidence\\\" says cast member Freyaa Ali about girls in boxing\"\n"
+    "article_str=\"March 31, 2015 Iran's controversial nuclear program, U.S. oil production, and the wealth of American presidents are three topics covered this Tuesday on CNN Student News. We're delivering a random fact about the height of a historic conqueror, and we're examining what it takes for rescue dogs to locate avalanche victims. And we have a follow-up on a pair of eagles who are excellent parents. On this page you will find today's show Transcript and a place for you to request to be on the CNN Student News Roll Call. TRANSCRIPT Click here to access the transcript of today's CNN Student News program. Please note that there may be a delay between the time when the video is available and when the transcript is published. CNN Student News is created by a team of journalists who consider the Common Core State Standards, national standards in different subject areas, and state standards when producing the show. ROLL CALL For a chance to be mentioned on the next CNN Student News, comment on the bottom of this page with your school name, mascot, city and state. We will be selecting schools from the comments of the previous show. You must be a teacher or a student age 13 or older to request a mention on the CNN Student News Roll Call! Thank you for using CNN Student News!\"\n",
+    "human_str=\"This page includes the show Transcript Use the Transcript to help students with reading comprehension and vocabulary At the bottom of the page, comment for a chance to be mentioned on CNN Student News.  You must be a teacher or a student age 13 or older to request a mention on the CNN Student News Roll Call.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
     "    'outputTokens': outputRecords\n",
     "}\n",
     "\n",
-    "with open('/Users/haldenl/nlpcapstone/data/hierarchical_similarity_data_{0}.json'.format('women'), 'w') as out:\n",
+    "with open('/Users/haldenl/nlpcapstone/data/hierarchical_similarity_data_{0}.json'.format('women_1'), 'w') as out:\n",
     "    json.dump(output, out, indent=2)\n"
    ]
   },
